Added episode details
